--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:github":"npm run delete:docs && npm run build:href && npm run copy:dist",
-    "delete:docs":"del docs",
-    "build:href":"ng build --base-href ./",
-    "copy:dist":"copyfiles dist/bases/* ./docs -f"
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
+    "delete:docs": "del docs",
+    "build:href": "ng build --base-href ./",
+    "copy:dist": "copyfiles dist/gifs-app/* ./docs -f"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "copyfiles": "^2.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
